# OpenCVDemo

Demo/A-LoadandShow/fileStorge/: CMakeLists.txt  fileStorage.cpp  lovepeace.txt
Demo/A-LoadandShow/openVideo/: CMakeLists.txt  openVideo.cpp
Demo/A-LoadandShow/showGray/: CMakeLists.txt  showGray.cpp
Demo/B-SaveToFile/imagesaveToFile/: CMakeLists.txt  imageToFile.cpp
Demo/B-SaveToFile/videosaveToFile/: CMakeLists.txt
Demo/C-ChangeBrightness/image/: changeBrightness.cpp
Demo/C-ChangeBrightness/video/: CMakeLists.txt  changeBrightness.cpp
Demo/D-ChangeContrast/image/: CMakeLists.txt  changeContrast.cpp
Demo/D-ChangeContrast/video/: changeContrast.cpp
Demo/E-Histogram_Equalization/: CMakeLists.txt  histogramEqualization.cpp
Demo/F-Filter/Gaussian_Blur/image/: CMakeLists.txt  GaussianBlur.cpp
Demo/F-Filter/Gaussian_Blur/video/: GaussianBlur.cpp
Demo/F-Filter/Homogeneous_Blur/image/: HomogeneousBlur.cpp
Demo/F-Filter/Homogeneous_Blur/video/: CMakeLists.txt  HomogeneousBlur.cpp
